--- a/lib/chat_live_view_web/live/topic_live.html.heex
+++ b/lib/chat_live_view_web/live/topic_live.html.heex
@@ -75,19 +75,7 @@
           <div class="relative h-full" style="min-height: 36rem">
             <!-- start our messages -->
                 <ul role="list" class="divide-y divide-gray-200 max-h-screen h-3/5 overflow-auto">
-                <li class="relative bg-white py-5 px-4 focus-within:ring-2 focus-within:ring-inset focus-within:ring-indigo-600 hover:bg-gray-50">
-                    <div class="flex justify-between space-x-3">
-                      <div class="min-w-0 flex-1">
-                          <a href="#" class="block focus:outline-none">
-                          <span class="absolute inset-0" aria-hidden="true"></span>
-                          <p class="truncate text-sm font-medium text-gray-900 mb-4">Gloria Roberston</p>
-                          </a>
-                      </div>
-                    </div>
-                    <div class="mt-1">
-                    <p class="text-sm text-gray-600 line-clamp-2">Doloremque dolorem maiores assumenda dolorem facilis. Velit vel in a rerum natus facere. Enim rerum eaque qui facilis. Numquam laudantium sed id dolores omnis in. Eos reiciendis deserunt maiores et accusamus quod dolor.</p>
-                    </div>
-                </li>
+                  <.user_msg_heex />
                 <!-- More messages... -->
                 </ul>
             <!-- end of our messages -->
