--- a/lib/chat_live_view_web/live/topic_live.html.heex
+++ b/lib/chat_live_view_web/live/topic_live.html.heex
@@ -76,7 +76,7 @@
             <!-- start our messages -->
                 <ul role="list" class="divide-y divide-gray-200 max-h-screen h-3/5 overflow-auto">
                   <%= for message_data <- @chat_messages do %>
-                    <.user_msg_heex msg={message_data} />
+                    <.user_msg_heex msg_data={message_data} />
                   <% end  %>
                 <!-- More messages... -->
                 </ul>
