--- a/lib/chat_live_view_web/live/topic_live.html.heex
+++ b/lib/chat_live_view_web/live/topic_live.html.heex
@@ -27,10 +27,15 @@
           </div>
         </div>
 
-        <!-- Search section -->
+        <!-- Header section -->
         <div class="flex flex-1 justify-center lg:justify-end">
           <div class="w-full px-2 lg:px-6">
-            <p class="text-xl text-gray-600 font-bold px-4">Phoenix 1.7.0 and Live View</p>
+            <p class="text-xl text-gray-600 font-bold px-4">
+              Currently in Topic:
+              <strong>
+                <%= Utils.StringUtils.capitalize_all(@topic_name) %>
+              </strong>
+            </p>
           </div>
         </div>
         <!-- Links section -->
@@ -73,10 +78,11 @@
         <div class="h-full py-6 px-4 sm:px-6 lg:px-8">
           <!-- Start main area-->
           <div class="relative h-full" style="min-height: 36rem">
+          <p class="mb-4 lg:block xl:hidden">Chat Messages</p>
             <!-- start our messages -->
-                <ul role="list" id="chat_messages" class="divide-y divide-gray-200 max-h-screen h-3/5 overflow-auto" phx-update="append">
+                <ul role="list" id="chat_messages" class="divide-gray-200 max-h-screen h-3/5 overflow-auto" phx-update="append">
                   <%= for message_data <- @chat_messages do %>
-                    <.user_msg_heex msg_data={message_data} />
+                    <.user_msg_heex msg_data={message_data} me={@username} />
                   <% end  %>
                 <!-- More messages... -->
                 </ul>
@@ -95,10 +101,6 @@
         <!-- Start right column area -->
         <div class="relative h-full" style="min-height: 16rem">
           <!-- Start whatever you want here -->
-            <h1 class="mb-4 pb-4 border-b">Currently in Topic: 
-              <strong><%= Utils.StringUtils.capitalize_all(@topic_name) %></strong>
-            </h1>
-
             <p class="">Built by <strong>github.com/wagner-de-carvalho</strong></p>
             <p><strong>Using: </strong></p>
             <img src="/images/phoenix.png" alt="pp" class="mx-auto"/>
